apps/simple-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  labels:
    app: simple-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
