apps/simple-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx
spec:
  selector:
    app: simple-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
