apps/simple-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: know.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-nginx
            port:
              number: 80
